--- a/forge-fort/src/styles/mapcontent.scss
+++ b/forge-fort/src/styles/mapcontent.scss
@@ -122,8 +122,9 @@
         display: inline-block;
         // max-width: 400px;
         width: 40%;
-        min-height: 550px;
-        height: 50vh;
+        // min-height: 550px;
+        // height: 50vh;
+        // height: 100%;
         // background-color: burlywood;
     }
 
@@ -153,9 +154,9 @@
     }
 
 
-    #gdpCharts {
-        background-color: burlywood;
-    }
+    // #gdpCharts {
+    //     background-color: burlywood;
+    // }
 }
 
 
